# PythonExampleProject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tox-gh-actions.yml
src/mytestpackage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
