[build-system]
requires = ["setuptools==69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mytestpackage"
version = "0.0.1"
authors = [
  { name="Markus Lang", email="datamastery87@gmail.com"},
]
description = "Sample Package"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas == 2.2.0",
    "numpy == 1.26.4"
]

[project.optional-dependencies]
dev = [
  "autoflake==2.2.1",
  "black==24.1.1",
  "build==1.0.3",
  "coverage==7.4.1",
  "flake8==7.0.0",
  "isort==5.13.2",
  "mypy==1.8",
  "pre-commit==3.6.0",
  "pytest==8.0.0",
  "pytest-cov==4.1.0",
  "toml==0.10.2",
  "tox==4.12.1",
  "twine==4.0.2",
  "tox-gh-actions==3.2.0",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.autoflake]
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -v --cov --cov-report term-missing"
minversion = 8.0
pythonpath = ["src"]
testpaths = ["tests"]
